packages/swc-plugin-workflow/transform/tests/errors/misplaced-module-directive/input.js
// This should error - directive after import
import { something } from './module';

'use step';

export async function test() {
  return 42;
}
